# ironbelly

./: .babelrc  .env.demo  .env.dev  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .gitmodules  .prettierrc  .prettierrc.js  .travis.yml  CONTRIBUTING.md  Gemfile  README.md  app.json  index.android.js  index.js  install.sh  metro.config.js  package-lock.json  package.json  react-native.config.js  rn-polyfill-depricated-proptypes.js  sign-with-local.sh  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
android/: build.gradle  get_apk_from_aab.sh  gradle.properties  gradlew.bat  settings.gradle
android/app/: BUCK  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/fastlane/: Appfile  Fastfile  README.md
docs/: balance.uml  navigation.uml  refresh.uml  release_test.md
e2e/: utils.js  walletInit.spec.js
fastlane/: Appfile  Fastfile  README.md  Snapfile
ios/: .xcode.env.local  Cartfile  Cartfile.resolved  Podfile  upload-sourcemaps.sh
ios/Ironbelly/: AppConfig.m  AppConfig.swift  AppDelegate.swift  GrinBridge.m  GrinBridge.swift  Info.plist  LaunchScreen.storyboard  String.swift  TorBridge.m  TorBridge.swift  Utils.swift  Wallet-Bridging-Header.h  wallet.h
ios/Ironbelly.xcodeproj/: project.pbxproj
ios/Ironbelly.xcodeproj/xcshareddata/xcschemes/: Ironbelly-tvOS.xcscheme  Ironbelly.xcscheme  Snapshots.xcscheme
ios/Ironbelly.xcworkspace/: contents.xcworkspacedata
ios/Ironbelly/Base.lproj/: LaunchScreen.storyboard  LaunchScreen.xib
ios/Ironbelly/Tor/: OnionConnector.swift  OnionManager.swift  OnionSettings.swift
ios/Ironbelly/Tor/Helpers/: Ipv6Tester.swift  NetworkTools.h  NetworkTools.m
ios/IronbellyTests/: Info.plist  IronbellyTests.m
ios/UITests/: Info.plist  UITests.swift
ios/Wallet.xcframework/: Info.plist
ios/fastlane/: Appfile  Fastfile
patches/: @react-native-community+async-storage+1.9.0.patch  @react-native-community+clipboard+1.2.2.patch  @react-native-community+masked-view+0.1.10.patch  expo-barcode-scanner+9.1.0.patch  react-native+0.70.0.patch  react-native-background-timer+2.4.1.patch  react-native-config+1.4.5.patch  react-native-config+1.5.1.patch  react-native-document-picker+3.5.4.patch  react-native-easy-toast+1.2.0.patch  react-native-easy-toast+2.0.0.patch  react-native-fs+2.16.6.patch  react-native-fs+2.20.0.patch  react-native-gesture-handler+1.8.0.patch  react-native-keep-awake+4.0.0.patch  react-native-keychain+5.0.1.patch  react-native-linear-gradient+2.8.3.patch  react-native-navigation-bar-color+2.0.1.patch  react-native-navigation-bar-color+2.0.2.patch  react-native-screens+2.5.0.patch  react-native-share+3.2.0.patch  react-native-share+3.3.1.patch  react-native-splash-screen+3.3.0.patch  react-native-svg+12.1.0.patch  react-native-touch-id+4.4.1.patch  react-native-vector-icons+10.0.3.patch  react-native-vector-icons+7.1.0.patch
rust/: Cargo.toml  Makefile  bindings.h  build.rs  copy_android.sh
rust/scripts/: build.sh  build_m1.sh  init.sh  variables.sh  variables_m1.sh
rust/src/: android.rs  errors.rs  ios.rs  lib.rs
scripts/: additional-licenses.js  applesimutils.sh  licenses.js  npm.sh  rust.sh  test.sh
src/: App.js  App.tsx  mocks.ts  themes.ts
src/bridges/: wallet.ts
src/common/: bugsnag.android.js  bugsnag.android.ts  bugsnag.ios.ts  bugsnag.js  colors.js  colors.ts  index.js  index.ts  logger.js  logger.ts  migrations.js  migrations.ts  redux.js  redux.ts  sideEffects.js  sideEffects.ts  store.ts  types.js  types.ts
src/components/: Balance.js  Balance.tsx  CardTitle.tsx  CopyButton.tsx  CopyHeader.tsx  CustomFont.js  CustomFont.tsx  FormTextInput.js  FormTextInput.tsx  Header.js  Header.tsx  HeaderSpan.js  HeaderSpan.tsx  InputContentRow.tsx  ManyStepsView.js  MnemonicWordTextInput.js  MnemonicWordTextInput.tsx  NextScreenWithManySteps.js  Notice.tsx  NumericInput.js  NumericInput.tsx  OpenFileButton.tsx  PasteButton.tsx  PasteHeader.tsx  RecoveryProgress.js  ScanQRCodeButton.tsx  ScreenWithManySteps.js  SectionTitle.tsx  SettingsListItem.js  SettingsListItem.tsx  ShareButton.tsx  ShareRow.tsx  ShowQRCodeButton.tsx  Textarea.tsx  TxListItem.js  TxListItem.tsx  TxPostConfirmationModal.js  TxPostConfirmationModal.tsx  Wrapper.js
src/documents/: legal-disclaimer-ios.ts  receive-from-another-person.ts
src/flow-typed/: NativeModules.js  NativeModules.ts  react-native-keyboard-aware-scroll-view.js  react-native-keyboard-aware-scroll-view.ts  react-native-torch.js  react-native-torch.ts
src/modules/: app.ts  balance.js  balance.ts  currency-rates.js  currency-rates.ts  navigation.js  navigation.ts  navigation.tsx  settings.js  settings.ts  toaster.js  toaster.ts  tor.ts  tx.js  tx.ts  wallet.js  wallet.ts
src/modules/navigation/: index.js  index.ts  routes.js  routes.ts
src/modules/tx/: receive.ts
src/screens/: ConfirmPasswordStep.js  EnterPasswordStep.js  Initial.js  Initial.tsx  Landing.js  Landing.tsx  LegalDisclaimer.js  LegalDisclaimer.tsx  License.tsx  Licenses.tsx  Mnemonic.js  NewPassword.js  NewPassword.tsx  Overview.js  Overview.tsx  Password.js  Password.tsx  Receive.js  Receive.tsx  ReceiveFinalize.js  ReceiveGuide.js  ReceiveGuide.tsx  ReceiveInfo.js  ReceiveInfo.tsx  RecoveryInProgress.js  ScanQRCode.js  ScanQRCode.tsx  Send.js  Send.tsx  Settings.js  Settings.tsx  ShowQRCode.tsx  Topup.js  TxDetails.js  TxDetails.tsx  TxIncomplete.tsx  TxIncompleteReceive.tsx  TxIncompleteSend.tsx  WalletPrepare.js  WalletRepair.js  (+2 more)
src/screens/PaperKey/: Show.js  Show.tsx  Verify.js  Verify.tsx
src/screens/Recovery/: main.js  password.js  phrase.js
src/screens/Send/: address.js  amount.js  main.js  message.js  strategy.js  transport.js
src/screens/SendLink/: main.js
src/screens/Settings/: Currency.js  Currency.tsx  GrinNode.js  GrinNode.tsx  Support.tsx
src/screens/TxIncompleteReceive/: GrinAddress.tsx  TxIncompleteReceive.tsx
src/screens/TxIncompleteSend/: SlateCreated.tsx  SlateNotCreated.tsx  TxIncompleteSend.tsx
src/screens/WalletNew/: main.js
(+34 files in other folders)
