[package]
name = "ironbelly-wallet"
version = "0.1.0"
authors = ["Ivan Sorokin <ivan@sorokin.io>"]
description = "Ironbelly - Grin mobile wallet"
publish = false
edition = "2018"

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
uuid = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"

# For Release
# ^
# Does not exist yet

# For bleeding edge
# grin_wallet_api = { git = "https://github.com/cyclefortytwo/grin-wallet", branch = "ironbelly" }
# grin_wallet_impls = { git = "https://github.com/cyclefortytwo/grin-wallet", branch = "ironbelly" }
# grin_wallet_libwallet = { git = "https://github.com/cyclefortytwo/grin-wallet", branch = "ironbelly" }
# grin_wallet_config = { git = "https://github.com/cyclefortytwo/grin-wallet", branch = "ironbelly" }
# grin_wallet_util = { git = "https://github.com/cyclefortytwo/grin-wallet", branch = "ironbelly" }


# For local testing
grin_wallet_api = { path = "../../../cyclefortytwo/grin-wallet/api", version = "3.1.0-beta.1" }
grin_wallet_impls = { path = "../../../cyclefortytwo/grin-wallet/impls", version = "3.1.0-beta.1" }
grin_wallet_libwallet = { path = "../../../cyclefortytwo/grin-wallet/libwallet", version = "3.1.0-beta.1" }
grin_wallet_config = { path = "../../../cyclefortytwo/grin-wallet/config", version = "3.1.0-beta.1" }
grin_wallet_util = { path = "../../../cyclefortytwo/grin-wallet/util", version = "3.1.0-beta.1" }
grin_wallet_controller = { path = "../../../cyclefortytwo/grin-wallet/controller", version = "3.1.0-beta.1" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[build-dependencies]
built = "0.3"
cbindgen = "0.8.3"

[lib]
name = "wallet"
crate-type = ["staticlib", "cdylib"]

[patch.crates-io]
croaring = { path = "./croaring-rs", version = "0.3.9" }
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }

[features]
default = ["jni"]
