[package]
name = "ironbelly-wallet"
version = "0.1.0"
authors = ["Ivan Sorokin <ivan@sorokin.io>"]
description = "Ironbelly - Grin mobile wallet"
publish = false
edition = "2018"

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3"


# For Release
# ^
# Does not exist yet

# For bleeding edge
grin_wallet_api = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_wallet_impls = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_wallet_libwallet = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_wallet_config = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_wallet_util = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_wallet_controller = { git = "https://github.com/i1skn/grin-wallet", branch = "master" }
grin_core = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_keychain = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_util = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_api = { git = "https://github.com/mimblewimble/grin", branch = "master" }


# For local testing
# grin_wallet_api = { path = "../../../i1skn/grin-wallet/api", version = "5.2.0-beta.1" }
# grin_wallet_impls = { path = "../../../i1skn/grin-wallet/impls", version = "5.2.0-beta.1" }
# grin_wallet_libwallet = { path = "../../../i1skn/grin-wallet/libwallet", version = "5.2.0-beta.1" }
# grin_wallet_config = { path = "../../../i1skn/grin-wallet/config", version = "5.2.0-beta.1" }
# grin_wallet_util = { path = "../../../i1skn/grin-wallet/util", version = "5.2.0-beta.1" }
# grin_wallet_controller = { path = "../../../i1skn/grin-wallet/controller", version = "5.2.0-beta.1" }
# grin_core = { git = "https://github.com/mimblewimble/grin", branch = "master" }
# grin_keychain = { git = "https://github.com/mimblewimble/grin", branch = "master" }
# grin_util = { git = "https://github.com/mimblewimble/grin", branch = "master" }
# grin_api = { git = "https://github.com/mimblewimble/grin", branch = "master" }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[build-dependencies]
built = "0.3"
cbindgen = "0.8.3"

[lib]
name = "wallet"
crate-type = ["staticlib", "cdylib"]

[patch.crates-io]
# croaring = { path = "../../../i1skn/croaring-rs/croaring" }
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }
# openssl-src = { git = "https://github.com/i1skn/openssl-src-rs", branch = "release/111" }

[features]
default = ["jni"]
